# sysyc

./: .gitignore  CMakeLists.txt  README.md  SysY_v0.ebnf  SysY_v1.ebnf
src/: __include_this_directory.h  main.cc
src/backend/ast/evaluator/: context.cc  context.h  evaluator.cc  evaluator.h  ivlist.cc  ivlist.h
src/backend/eeyore/: codegen.cc  codegen.h
src/backend/quad/ast2quad/: ast2quad.cc  ast2quad.h  context.cc  context.h  ivlist.cc  ivlist.h
src/backend/quad/quadpass/: adjust_expr.cc  mem_check.cc  pow2_to_logical.cc  quadpass.h  (+2 more)
src/backend/riscv/: codegen.cc  codegen.h
src/backend/sysy/: codegen.cc  codegen.h
src/backend/tigger/: codegen.cc  codegen.h
src/facade/: compiler.cc  compiler.h  config.h
src/frontend/: lexer.cc  lexer.h  parser.cc  parser.h  sysystd.h  token.cc  token.h
src/middle/ast/: analyzer.cc  analyzer.h  generator.cc  generator.h  node.cc  node.h  node_type.cc  node_type.h
src/middle/quad/: address.h  inst.cc  inst.h  instseq.h  opcode.h  register.cc  register.h
src/misc/: logger.cc  logger.h
test/: CMakeLists.txt
test/extra-test-cases/: e01.sy  e02.sy  e03.sy  e04.out  e04.sy  e05.sy  e06.sy  e07.sy  e08.sy  e09.sy
test/scripts/: const.py  run_riscv_dev_env.sh  test_MiniVM.py  test_codegen_eeyore_quad.py  test_codegen_riscv_quad.py  test_codegen_sysy_ast.py  test_codegen_tigger_quad.py  test_evaluator.py  test_lexer.py  test_parser.py  test_sysyc_main.py  utils.py
test/src/: unit-codegen-eeyore-quad.cc  unit-codegen-riscv-quad.cc  unit-codegen-sysy-ast.cc  unit-codegen-tigger-quad.cc  unit-evaluator.cc  unit-lexer.cc  unit-parser.cc  utils.hpp
(+5 files in other folders)
